[🐛 Fix] Fix search responsive and codeblock wrap

--- a/theme/static/sass/article.sass
+++ b/theme/static/sass/article.sass
@@ -18,7 +18,7 @@
         font-weight: 500
     img
       max-width: 90%
-      max-height: 50%
+      max-height: 600px
       margin: 20px auto 33.5px auto
       display: block
       transition: .2s
@@ -46,6 +46,7 @@
       width: 100%
       padding: 15px !important
       display: inline-block
+      white-space: break-spaces
     h1, h2
       font-weight: 500
       margin: 15px 0
