--- a/theme/static/sass/search.sass
+++ b/theme/static/sass/search.sass
@@ -3,7 +3,6 @@
 #tipue_search_input
   width: 30%
   margin: 30px auto
-  margin-left: 35%
   border-radius: 8px
   color: var(--text-color)
   font-size: 17px
